--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ data.forEach(item => {
             return `<td><a href="${value}" target="_blank">${id}</a></td>`;
         }
         else if (key.toLowerCase().includes('malacards')) {
+            // Always show as "Link", not the actual ID/URL
             return `<td><a href="${value}" target="_blank">Link</a></td>`;
         } 
         else {
@@ -85,6 +86,7 @@ data.forEach(item => {
     }).join('');
     tbody.appendChild(tr);
 });
+
 
     // Search filter
     const searchInput = document.getElementById('search-input');
@@ -104,6 +106,7 @@ window.addEventListener('DOMContentLoaded', loadJSON);
 
 </body>
 </html>
+
 
 
 
